--- a/Voting/VotingApp/Components/App.razor
+++ b/Voting/VotingApp/Components/App.razor
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html>
+﻿@using VotingApp.Components.Layout
+
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -14,6 +16,7 @@
 </head>
 
 <body>
+    <CircuitProps/>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
