--- a/PollingStation/PollingStationApp/Components/App.razor
+++ b/PollingStation/PollingStationApp/Components/App.razor
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using PollingStationApp.Components.Layout
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,6 +16,7 @@
 </head>
 
 <body>
+    <CircuitProps />
     <Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
