add committee members actions
# Conflicts:
#	PollingStation/PollingStationApp/Components/Layout/NavMenu.razor
#	PollingStation/PollingStationApp/Components/Shared/VoterPopUp.razor

--- a/PollingStation/PollingStationApp/Components/Shared/VoterPopUp.razor
+++ b/PollingStation/PollingStationApp/Components/Shared/VoterPopUp.razor
@@ -32,7 +32,7 @@
                                 <Div>
                                     <Paragraph><strong>Data nașterii:</strong> @Voter.DateOfBirth.ToShortDateString()</Paragraph>
                                     <Paragraph><strong>Locul nașterii:</strong> @Voter.PlaceOfBirth</Paragraph>
-                                    <Paragraph><strong>Sex:</strong> @Voter.Gender</Paragraph>
+                                    <Paragraph><strong>Gen:</strong> @Voter.Gender</Paragraph>
                                 </Div>
                             }
                             else
