--- a/PollingStation/PollingStationApp/Components/Layout/NavMenu.razor
+++ b/PollingStation/PollingStationApp/Components/Layout/NavMenu.razor
@@ -25,7 +25,7 @@
         @if (member != null && member.Role == "President")
         {
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="counter" Match="NavLinkMatch.All">
+                <NavLink class="nav-link" href="boothStatus" Match="NavLinkMatch.All">
                     <i class="polling-station-icon navmenu-icon fa-solid fa-person-booth"></i>
                     <span class="title">Status Cabine</span>
                 </NavLink>
