--- a/Voting/VotingApp/Components/Layout/MainLayout.razor
+++ b/Voting/VotingApp/Components/Layout/MainLayout.razor
@@ -57,7 +57,7 @@
                 Console.WriteLine($"MainLayout using UserOnlineService [{UserOnlineService.InstanceId}]");
             }
 
-            Console.WriteLine(pollingStation);
+            //Console.WriteLine(pollingStation);
 
         }catch (Exception ex) 
         {
