--- a/PollingStation/PollingStationApp/Components/Layout/MainLayout.razor
+++ b/PollingStation/PollingStationApp/Components/Layout/MainLayout.razor
@@ -43,7 +43,7 @@
             pollingStation = UserOnlineService.PollingStation;
             StateHasChanged();
             Console.WriteLine($"MainLayout using UserOnlineService [{UserOnlineService.InstanceId}]");
-            Console.WriteLine(pollingStation);
+            //Console.WriteLine(pollingStation);
 
         }
         catch (Exception ex)
