--- a/Voting/VotingApp/Components/Layout/CircuitProps.razor
+++ b/Voting/VotingApp/Components/Layout/CircuitProps.razor
@@ -36,7 +36,7 @@
 
        // Console.WriteLine($"CircuitProps using UserOnlineService [{UserOnlineService.InstanceId}]");
 
-        Console.WriteLine(pollingStation);
+        //Console.WriteLine(pollingStation);
         StateHasChanged();
     }
 }
